20100220 mnemogogo-1.1.0
* Bugfixes to Android client library.
* Remove encoding requests to support IBM Java VM on Palm.
* Add backupStats() functionality to mobile/hexcsv.
* Fix a bug in the logging of thinking time.
* Remove unnecessary newlines from stats logging into Mnemosyne.
* Add checks for data corruption in readCard.
* Fix a read corruption bug in readCard (particularly under Android).
* Support for different database files in the same card directory
  (thanks to Kristófer Hannesson for detecting and reporting this problem).
* Fix a porting bug in card grading whereby card easiness could drop below
  1.3. Any cards affected by this bug will be corrected when they are next
  reviewed using the updated library.

20100124 mnemogogo-1.0.0
* PRODUCTION RELEASE
* Add more meaningful exception messages for when problems occur
  in parsing CONFIG.
* Fix a minor problem in the tracking of future schedules.
* Provide a better error message for when the synchronization path
  is not set at all.
* Improve Mnemogogo error messages at startup and during export.
* No longer lock the preview window in remote mode.
* Add maximum image parameters to the config panel and simplify the
  list of interfaces: just one entry for Mnemojojo and a new entry for
  Mnemododo.
* Image manipulation now uses qt library functions and there is no longer a
  dependency on the Python Imaging Library (PIL)
* Fix a subtle bug in the initialization of Job and Export classes
  (it only affected repeated exports during a single Mnemosyne session in a
   minor way).
* Adapt the mnemogogo/mobile/hexcsv library for Android.
* Warn when errors are logged to log.txt.

20091220 mnemogogo-0.9.10
* Fix a bug in start_date handling that caused shifted statistics at
  each import after changing timezone (thanks to Mackan Svensson for
  bug report.)
  IMPORTANT: export format changes require Mnemojojo 0.9.6 or above!
* Really fix QString + str error on invalid plugin under Windows